overflow issue fixed

--- a/src/components/UI/OceanDriveEventModalFirst/style.module.scss
+++ b/src/components/UI/OceanDriveEventModalFirst/style.module.scss
@@ -1,12 +1,14 @@
 .modal {
-  overflow: hidden;
+  overflow: hidden !important;
   @media (max-width: 600px) {
     overflow-x: hidden;
+    overflow: hidden !important;
   }
 }
 
 .container {
   width: 600px;
+  max-height: 100%;
   @media (max-width: 600px) {
     width: 100%;
   }
@@ -55,6 +57,7 @@
       margin-left: -30px;
       margin-bottom: -30px;
       overflow-x: hidden;
+      overflow-y: hidden;
       @media (max-width: 600px) {
         width: 350px;
         margin-left: -20px;
